--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,4 +1,7 @@
+build_platform:
+  linux_aarch64: linux_64
+  osx_arm64: osx_64
 github:
-  branch_name: main
+  branch_name: prueba
   tooling_branch_name: main
 conda_forge_output_validation: true
