--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -4,6 +4,7 @@ build_platform:
 github:
   branch_name: prueba
   tooling_branch_name: main
-conda_forge_output_validation: true
-linux_aarch64:
-  enable: True
+provider:
+  linux_64: azure
+  osx_64: azure
+  linux_aarch64: azure
