--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,10 +1,6 @@
-build_platform:
-  #linux_aarch64: linux_64
-  osx_arm64: osx_64
 github:
   branch_name: prueba
   tooling_branch_name: main
 provider:
-  linux_64: azure
-  osx_64: azure
-  linux_aarch64: azure
+  osx_64: default
+  linux_aarch64: default
