--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,6 +1,8 @@
+build_platform:
+  osx_arm64: osx_64
+  linux_aarch64: linux_64
+  linux_ppc64le: linux_64
 github:
   branch_name: main
   tooling_branch_name: main
-provider:
-  osx_64: default
-  linux_aarch64: default
+conda_forge_output_validation: true
